--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laraveles/spanish": "^1.1",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-fractal": "^5.4"
     },
