--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
+        "fideloper/proxy": "~4.0",
+        "laravel/framework": "5.6.*",
+        "laravel/passport": "^7.1",
         "laravel/tinker": "~1.0",
         "laraveles/spanish": "^1.1",
         "maatwebsite/excel": "^3.1",
